Claimsum calculation now included in a modal. Fixed bug when canceling creation of new Ombud.

--- a/Sjuklöner/Content/Site.css
+++ b/Sjuklöner/Content/Site.css
@@ -604,6 +604,14 @@ li a {
     padding: 6px 6px;
 }
 
+.btn-secondary-xsmall {
+    margin-left: 0;
+    font-size: 14px;
+    width: 55px;
+    height: 31px;
+    padding: 2px 2px;
+}
+
 .btn-secondary-small-wide {
     margin-left: 78px;
     font-size: 14px;
@@ -1133,6 +1141,10 @@ special-left-margin {
     padding-left: 0;
 }
 
+.col-no-right-padding {
+    padding-right: 0;
+}
+
 .col-small-left-padding {
     padding-left: 5px;
 }
@@ -1220,6 +1232,10 @@ special-left-margin {
     margin-top: 8px;
 }
 
+.align-bottom4 {
+    margin-top: 16px;
+}
+
 .breadcrumb {
     background-color: #ffffff;
     margin-top: 110px;
@@ -1267,6 +1283,10 @@ a:hover, a:focus {
 .claimdetails-col {
     width: 11%;
     vertical-align: text-top;
+}
+
+.input-height {
+    line-height: 25px;
 }
 
 .row-divider {
