--- a/Sjuklöner/Views/Account/CreateOmbud.cshtml
+++ b/Sjuklöner/Views/Account/CreateOmbud.cshtml
@@ -71,7 +71,7 @@
                 <input class="btn btn-primary btn-primary-small" type="submit" name="submitButton" value="Spara" id="proceed" />
             </div>
             <div>
-                @Html.ActionLink("Avbryt", "IndexOmbud", null, new { @class = "btn btn-secondary btn-secondary-small" })
+                @Html.ActionLink("Avbryt", "IndexOmbud", "CareCompanies", null, new { @class = "btn btn-secondary btn-secondary-small" })
             </div>
         </div>
     </div>
