--- a/Sjuklöner/Views/Assistants/Details.cshtml
+++ b/Sjuklöner/Views/Assistants/Details.cshtml
@@ -3,19 +3,19 @@
 @{
     ViewBag.Title = "Details";
 }
-
-<h2>Details</h2>
-
+<div class="row index-page-margin">
+    <p class="col col-md-2"></p>
+    <p class="page-header8 col col-md-10">Detaljvy, assistent</p>
+</div>
 <div>
-    <h4>Assistant</h4>
-    <hr />
+    <hr class="claim-divider" />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.CareCompanyId)
+            @Html.DisplayNameFor(model => model.CareCompany.CompanyName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.CareCompanyId)
+            @Html.DisplayFor(model => model.CareCompany.CompanyName)
         </dd>
 
         <dt>
@@ -91,7 +91,9 @@
         </dd>
     </dl>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+<div class="row">
+    <div class="col col-md-offset-2 col-md-1 col-no-left-padding">
+        @*@Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |*@
+        @Html.ActionLink("Tillbaka", "Index", null, new { @class = "btn btn-primary btn-primary-small" })
+    </div>
+</div>
