--- a/Sjuklöner/Views/CareCompanies/DetailsOmbud.cshtml
+++ b/Sjuklöner/Views/CareCompanies/DetailsOmbud.cshtml
@@ -53,7 +53,7 @@
 </div>
 <div class="row">
     <div class="col col-md-offset-2 col-md-1 col-no-left-padding">
-        @Html.ActionLink("Tillbaka", "IndexOmbud", null, new { @class = "btn btn-secondary btn-secondary-small" })
+        @Html.ActionLink("Tillbaka", "IndexOmbud", null, new { @class = "btn btn-primary btn-primary-small" })
     </div>
 </div>
 @*<p>
