--- a/Sjuklöner/Views/Claims/Recommend.cshtml
+++ b/Sjuklöner/Views/Claims/Recommend.cshtml
@@ -149,7 +149,20 @@
             <input class="btn btn-success" type="submit" value="Nästa steg" />
         </div>
         <div class="col col-md-1">
-            @Html.ActionLink("Detaljer", "ShowClaimDetails", "Claims", new { referenceNumber = Model.ClaimNumber }, new { @class = "btn btn-primary" })
+            @Html.ActionLink(Model.ClaimNumber, "_ShowClaim", new { refNumber = Model.ClaimNumber }, new { @class = "btn-sm js-show-view-btn btn btn-primary" })
+            @*@Html.ActionLink("Detaljer", "ShowClaimDetails", "Claims", new { referenceNumber = Model.ClaimNumber }, new { @class = "btn btn-primary" })*@
+        </div>
+        <div class="hidden-by-default" id="claimnumber">@Model.ClaimNumber</div>
+        <div id='myModal' class='modal' style="text-align:left;">
+            <div class="modal-dialog" style="width:85%; height:400px; padding:10px;">
+                <div class="modal-content" style="overflow: auto; padding:10px; background-color:#fbf9ef;">
+                    <button type="button" id="closbtn" float="right"> Stäng </button>
+                    <div style="height:10px;">
+                    </div>
+                    <div id='myModalContent' style="width:1200px; height:400px; padding:10px;">
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 }
@@ -262,4 +275,31 @@
             }
         }
     }
+
+    $(function () {
+        $(".js-show-view-btn").click(function (e) {
+            e.preventDefault();
+            var $buttonClicked = $(this);
+            var options = {
+                "backdrop": "static",
+                keyboard: true
+            };
+            $.ajax({
+                method: "GET",
+                url: "/Claims/_ShowClaim",
+                contentType: "application/json; charset=utf-8",
+                datatype: "json",
+                data: { refNumber: this.innerHTML },
+                cache: false,
+                success: function (data, textStatus, jqXHR) {
+                    $("#myModalContent").html(data);
+                    $("#myModal").modal(options);
+                    $("#myModal").modal('show');
+                }
+            });
+        })
+        $("#closbtn").click(function () {
+            $('#myModal').modal('hide');
+        });
+    });
 </script>
