--- a/Sjuklöner/Views/Assistants/Create.cshtml
+++ b/Sjuklöner/Views/Assistants/Create.cshtml
@@ -94,8 +94,8 @@
         <div class="col col-md-offset-2 col-md-1">
             <input class="btn btn-primary btn-primary-small" type="submit" name="submitButton" value="Spara" id="proceed" />
         </div>
-        <div class="col col-md-1">
-            <input class="btn btn-secondary btn-secondary-small btn-left-margin-5" type="submit" name="submitButton" value="Avbryt" id="cancel" />
+        <div class="col col-md-2">
+            @Html.ActionLink("Avbryt", "Index", "Assistants", null, new { @class = "btn btn-secondary btn-secondary-small" })
         </div>
     </div>
 }
