--- a/Sjuklöner/Views/CareCompanies/Create.cshtml
+++ b/Sjuklöner/Views/CareCompanies/Create.cshtml
@@ -86,13 +86,12 @@
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+            <div class="col-md-offset-2 col-md-2">
+                <input type="submit" value="Spara" class="btn btn-primary btn-primary-small" />
+            </div>
+            <div class="col col-md-2">
+                @Html.ActionLink("Avbryt", "Index", "CareCompanies", null, new { @class = "btn btn-secondary btn-secondary-small" })
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
