Added a cancel link to Register page. Check for existing companies with matching org. nr.  Only create company if user can be successfully created.  Send errors back to view if creation fails.

--- a/Sjuklöner/Views/Account/Register.cshtml
+++ b/Sjuklöner/Views/Account/Register.cshtml
@@ -107,6 +107,9 @@
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Register" />
         </div>
+        <div>
+            @Html.ActionLink("Avbryt", "Login", "Account", null, new { @class = "btn btn-secondary btn-secondary-small" })
+        </div>
     </div>
 }
 
