Introduced viewmodels for Create and Edit of Assistants. Now the Id cannot be changed when creating a new Assistant. [Required] removed for properties in Assistant.cs and instead used in the viewmodels.

--- a/Sjuklöner/Views/Assistants/Create.cshtml
+++ b/Sjuklöner/Views/Assistants/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Sjuklöner.Models.Assistant
+﻿@model Sjuklöner.Viewmodels.AssistantCreateVM
 
 @{
     ViewBag.Title = "Create";
@@ -6,8 +6,6 @@
 
 @using (Html.BeginForm())
 {
-    @Html.HiddenFor(model => model.Id)
-    @Html.HiddenFor(model => model.CareCompanyId)
     @Html.AntiForgeryToken()
 
     <div class="row">
