--- a/Sjuklöner/Views/Assistants/Edit.cshtml
+++ b/Sjuklöner/Views/Assistants/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Sjuklöner.Models.Assistant
+﻿@model Sjuklöner.Viewmodels.AssistantEditVM
 
 @{
     ViewBag.Title = "Edit";
@@ -19,14 +19,6 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.CareCompanyId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CareCompanyId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CareCompanyId, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -108,11 +100,11 @@
     </div>
     <div class="row">
         <div class="form-group">
-            <div class="col col-md-1">
-                <input class="btn btn-primary btn-primary-small btn-left-margin-22" type="submit" name="submitButton" value="Spara" id="proceed" />
+            <div class="col col-md-offset-2 col-md-1">
+                <input class="btn btn-primary btn-primary-small" type="submit" name="submitButton" value="Spara" id="proceed" />
             </div>
-            <div class="col col-md-1">
-                <input class="btn btn-secondary btn-secondary-small btn-left-margin-22" type="submit" name="submitButton" value="Avbryt" id="cancel" />
+            <div class="col col-md-2">
+                @Html.ActionLink("Avbryt", "Index", "Assistants", null, new { @class = "btn btn-secondary btn-secondary-small" })
             </div>
         </div>
     </div>
