--- a/Sjuklöner/Views/Assistants/Create.cshtml
+++ b/Sjuklöner/Views/Assistants/Create.cshtml
@@ -11,7 +11,10 @@
     <div class="row">
         <p class="col col-md-2"></p>
         <p class="page-header7 col col-md-10">Lägg till assistent</p>
-        <br>
+    </div>
+    <div class="row">
+        <p class="col col-md-2"></p>
+        <p class="col col-md-10">Uppgifterna används vid ansökan om sjuklöneersättning</p>
     </div>
     <hr class="claim-divider" />
     <div class="row row-padding2">
