--- a/Sjuklöner/Views/CareCompanies/EditOmbud.cshtml
+++ b/Sjuklöner/Views/CareCompanies/EditOmbud.cshtml
@@ -12,7 +12,9 @@
     <div class="row">
         <p class="col col-md-2"></p>
         <p class="page-header7 col col-md-10">Uppdatera ombud</p>
-        <br>
+    </div>
+    <div class="row">
+        <p class="col col-md-offset-2 col-md-10">Uppgifterna används vid ansökan om sjuklöneersättning</p>
     </div>
     <hr class="claim-divider" />
     <div class="form-horizontal">
