--- a/Sjuklöner/Views/Claims/Create1.cshtml
+++ b/Sjuklöner/Views/Claims/Create1.cshtml
@@ -55,7 +55,7 @@
                 </div>
             </div>
             <div>
-                @Html.LabelFor(model => model.RegularAssistants, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.RegularAssistants, htmlAttributes: new { @class = "control-label col-md-2 display-right-align3" })
                 <div class="col-md-4">
                     @Html.DropDownListFor(model => model.SelectedRegAssistantId, new SelectList(Model.RegularAssistants, "Value", "Text", Model.SelectedRegAssistantId), "- ingen vald -", new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.RegularAssistants, "", new { @class = "text-danger" })
@@ -71,7 +71,7 @@
                 </div>
             </div>
             <div>
-                @Html.LabelFor(model => model.SubstituteAssistants, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.SubstituteAssistants, htmlAttributes: new { @class = "control-label col-md-2 display-right-align3" })
                 <div class="col-md-4">
                     @Html.DropDownListFor(model => model.SelectedSubAssistantId, new SelectList(Model.SubstituteAssistants, "Value", "Text", Model.SelectedSubAssistantId), "- ingen vald -", new { htmlAttributes = new { @class = "form-control" } })
                     @*@Html.ValidationMessageFor(model => model.SelectedSubAssistantId, "", new { @class = "text-danger" })*@
@@ -89,7 +89,7 @@
                 </div>
             </div>
             <div>
-                @Html.LabelFor(model => model.FirstDayOfSicknessDate, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.FirstDayOfSicknessDate, htmlAttributes: new { @class = "control-label col-md-2 display-right-align3" })
                 <div class="col-md-4">
                     @Html.EditorFor(model => model.FirstDayOfSicknessDate, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.FirstDayOfSicknessDate, "", new { @class = "text-danger" })
@@ -105,7 +105,7 @@
                 </div>
             </div>
             <div>
-                @Html.LabelFor(model => model.LastDayOfSicknessDate, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.LastDayOfSicknessDate, htmlAttributes: new { @class = "control-label col-md-2 display-right-align2" })
                 <div class="col-md-4">
                     @Html.EditorFor(model => model.LastDayOfSicknessDate, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.LastDayOfSicknessDate, "", new { @class = "text-danger" })
