--- a/Sjuklöner/Views/Assistants/Index.cshtml
+++ b/Sjuklöner/Views/Assistants/Index.cshtml
@@ -112,3 +112,8 @@
         </tr>
     }
 </table>
+<div class="row row-padding2">
+    <div class="col col-md-2">
+        @Html.ActionLink("Avbryt", "Index", "Claims", null, new { @class = "btn btn-secondary btn-secondary-small" })
+    </div>
+</div>
