--- a/Sjuklöner/Views/Claims/Create1.cshtml
+++ b/Sjuklöner/Views/Claims/Create1.cshtml
@@ -144,7 +144,7 @@
             <div id='myModal' class='modal' style="text-align:left;">
                 <div class="modal-dialog" style="width:70%; height:400px; padding:10px;">
                     <div class="modal-content" style="overflow: auto; padding:10px; background-color:#fbf9ef;">
-                        <button type="button" id="closbtn"> x </button>
+                        <button type="button" id="closbtn" float="right"> Stäng </button>
                         <div style="height:10px;">
                         </div>
                         <div id='myModalContent' style="width:1000px; height:400px; padding:10px;">
