--- a/Sjuklöner/Views/Account/Register.cshtml
+++ b/Sjuklöner/Views/Account/Register.cshtml
@@ -2,7 +2,7 @@
 @{
     /**/
 
-    ViewBag.Title = "Register";
+    ViewBag.Title = "Registrera ett nytt bolag";
 }
 
 <h2 class="page-header1">@ViewBag.Title</h2>
@@ -10,7 +10,6 @@
 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Create a new stuff.</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="row">
@@ -113,7 +112,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-4 col-md-6">
-            <input type="submit" class="btn btn-default" value="Register" />
+            <input type="submit" class="btn btn-default" value="Registrera" />
             @Html.ActionLink("Avbryt", "Login", "Account", null, new { @class = "btn btn-default" })
         </div>
     </div>
