Changed string for register button.

--- a/Sjuklöner/Views/Account/Login.cshtml
+++ b/Sjuklöner/Views/Account/Login.cshtml
@@ -50,7 +50,7 @@
             <br>
             <div class="form-group">
                 <p class="col-md-offset-2 col-md-10">
-                    @Html.ActionLink("Registrera ett nytt ombud", "Register")
+                    @Html.ActionLink("Registrera ett nytt bolag", "Register")
                 </p>
             </div>
             @*Enable this once you have account confirmation enabled for password reset functionality
