--- a/Sjuklöner/Views/Account/Register.cshtml
+++ b/Sjuklöner/Views/Account/Register.cshtml
@@ -151,6 +151,15 @@
             </div>
         </div>
     </div>
+    <div class="row row-padding2">
+        <div class="col col-md-6">
+        </div>
+        @Html.LabelFor(model => model.CollectiveAgreementSpecName, htmlAttributes: new { @class = "control-label col-md-2 display-right-align3" })
+        <div class="col-md-4">
+            @Html.EditorFor(model => model.CollectiveAgreementSpecName, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.CollectiveAgreementSpecName, "", new { @class = "text-danger" })
+        </div>
+    </div>
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-1">
