--- a/Sjuklöner/Content/Site.css
+++ b/Sjuklöner/Content/Site.css
@@ -686,6 +686,14 @@ li a {
     padding-top: 6px;
 }
 
+.font-size-9 {
+    font-size: 9px;
+}
+
+.font-size-11 {
+    font-size: 11px;
+}
+
 .font-size-12 {
     font-size: 12px;
     padding-left: 5px;
@@ -798,6 +806,21 @@ special-left-margin {
     padding-left: 28px;
     /*background-color: #c9caff;*/
     margin-bottom: 50px;
+    margin-left: 15px;
+    /*background-color: #ebe6e6;*/
+    /*background-color: #d7cece;*/
+}
+
+.div-assistant-frame2 {
+    line-height: 0.8;
+    border: 1px solid;
+    border-color: #ae0b05;
+    border-radius: 1px;
+    /*border-color: #d7cece;*/
+    padding-left: 28px;
+    /*background-color: #c9caff;*/
+    margin-bottom: 20px;
+    margin-left: 15px;
     /*background-color: #ebe6e6;*/
     /*background-color: #d7cece;*/
 }
@@ -809,10 +832,32 @@ special-left-margin {
     margin-left: 27px;
 }
 
+.row-height-10 {
+    height: 10px;
+}
+
+.row-height-4 {
+    height: 4px;
+}
+
+.row-height-22 {
+    height: 22px;
+}
+
+/*.margin-bottom-4 {
+    margin-bottom: 8px;
+}*/
+
+
 .height-38 {
     height: 38px;
     font-size: 18px;
     /*font-weight: bold;*/
+}
+
+.row-height-24 {
+    height: 24px;
+    font-size: 24px;
 }
 
 .row-height-42 {
@@ -842,6 +887,10 @@ special-left-margin {
     margin-left: 6px;
     margin-right: 3px;
     width: 8px;
+}
+
+.small-errormessage {
+    width: 95px;
 }
 
 .col-margin-left {
@@ -919,6 +968,11 @@ special-left-margin {
     margin-right: -3px;
 }
 
+.small-row-margin4 {
+    margin: 1px 0 1px 0;
+    /*margin-right: -3px;*/
+}
+
 .oncall-margin {
     margin-left: 9px;
 }
@@ -985,6 +1039,10 @@ special-left-margin {
     line-height: 1;
 }
 
+.row-height-12 {
+    height: 12px;
+}
+
 .row-height-50 {
     height: 50px;
 }
@@ -998,8 +1056,12 @@ special-left-margin {
     height: 36px;
 }
 
-.row height-30 {
+.row-height-30 {
     height: 30px;
+}
+
+.row-height-32 {
+    height: 32px;
 }
 
 .height-30 {
@@ -1364,6 +1426,14 @@ a:hover, a:focus {
 
 .small-padding-left3 {
     padding-left: 6px;
+}
+
+.small-padding-left4 {
+    padding-left: 14px;
+}
+
+.small-padding-left5 {
+    padding-left: 11px;
 }
 
 .table-button-cell {
